[package]
name = "reqline"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.22", features = ["json"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_rusqlite = "0.40.0"
tokio = { version = "1.46.1", features = ["full"] }
